# juce_meets_sdl

./: .gitmodules  CMakeLists.txt  README.md
Plugins/: CMakeLists.txt
Plugins/HelloJuceSdl/: CMakeLists.txt
Plugins/HelloJuceSdl/Source/: PluginEditor.cpp  PluginEditor.h  SDLRunner.cpp  SDLRunner.h
